welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:38: error: Unmatched closing brace '}' ignored here
}
^